# t-triste

./: .clippy.toml  .gitignore  Cargo.toml  Claude.md  MOBILE_BUILD.md  Makefile  README.md  codecov.yml  rustfmt.toml
.github/workflows/: ci.yml  main.yml  pr.yml
t-triste/: Cargo.toml
t-triste-lib/: Cargo.toml
t-triste-lib/src/: cursor.rs  lib.rs
t-triste-lib/src/piece/: board.rs  corner.rs  l.rs  mod.rs  piece.rs  piece_builder.rs  piece_set_generator.rs  rectangle.rs  square.rs  z.rs
t-triste-macro/: Cargo.toml
t-triste-macro/src/: lib.rs
t-triste/src/: main.rs
