[package]
name = "t-triste-lib"
version = "0.1.0"
authors = [
    "ImFlog <garcia.florian.perso@gmail.com>",
    "NugetChar <nugetchar@gmail.com>"
]
edition = "2021"

[dependencies]
t-triste-macro = { version = "*", path = "../t-triste-macro" }

[dependencies.bevy]
version = "0.17"
default-features = false
features = [
    "bevy_render",
    "bevy_sprite",
    "bevy_winit",
    "bevy_asset",
    "bevy_scene",
    "bevy_core_pipeline",
    "png"
]

[target.'cfg(target_os = "linux")'.dependencies.bevy]
version = "0.17"
default-features = false
features = ["x11"]

[target.'cfg(target_os = "android")'.dependencies.bevy]
version = "0.17"
default-features = false
features = ["android-game-activity"]

[target.'cfg(target_os = "ios")'.dependencies.bevy]
version = "0.17"
default-features = false
features = []
