[package]
name = "t-triste"
version = "0.1.0"
authors = [
    "ImFlog <garcia.florian.perso@gmail.com>",
    "NugetChar <nugetchar@gmail.com>"
]
edition = "2021"

[[bin]]
name = "t-triste"

[dependencies]
t-triste-lib = { version = "*", path = "../t-triste-lib" }

[dependencies.bevy]
version = "0.17"
default-features = false
features = [
    "bevy_render",
    "bevy_sprite",
    "bevy_winit",
    "x11",
    "bevy_asset",
    "bevy_scene",
    "bevy_core_pipeline",
    "png"
]