[package]
name = "t-triste"
version = "0.1.0"
authors = [
    "ImFlog <garcia.florian.perso@gmail.com>",
    "NugetChar <nugetchar@gmail.com>"
]
edition = "2021"

[[bin]]
name = "t-triste"

[dependencies]
t-triste-lib = { version = "*", path = "../t-triste-lib" }

[dependencies.bevy]
version = "0.17"
default-features = false
features = [
    "bevy_render",
    "bevy_sprite",
    "bevy_winit",
    "bevy_asset",
    "bevy_scene",
    "bevy_core_pipeline",
    "png"
]

[target.'cfg(target_os = "linux")'.dependencies.bevy]
version = "0.17"
default-features = false
features = ["x11"]

[target.'cfg(target_os = "android")'.dependencies.bevy]
version = "0.17"
default-features = false
features = ["android-game-activity"]

[target.'cfg(target_os = "ios")'.dependencies.bevy]
version = "0.17"
default-features = false
features = []

# Mobile platform configuration for cargo-mobile2
[package.metadata.android]
package = "com.ttrieste.game"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 34
compile_sdk_version = 34

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.VIBRATE"

[package.metadata.ios]
bundle_identifier = "com.ttrieste.game"
bundle_name = "T-Triste"
bundle_version = "0.1.0"
bundle_short_version = "0.1.0"